# ImGuiColorTextEdit

./: .gitignore  .gitmodules  CMakeLists.txt  ImGuiDebugPanel.cpp  TextEditor.cpp  TextEditor.h
.cache/clangd/index/: ImGuiDebugPanel.cpp.231CFBA82E3F8F82.idx  LanguageDefinitions.cpp.16DDF3F29AF63AD4.idx  TextEditor.cpp.C1670648DC29D599.idx  TextEditor.h.0F1D174422E7D076.idx  helper.h.8E0146150B1EEB77.idx  imconfig.h.DA23A17F1B426CC2.idx  imgui.cpp.FA9B4B5DB4A44890.idx  imgui.h.5895B9B354A3A4FA.idx  imgui_demo.cpp.6DAF72A00127667A.idx  imgui_draw.cpp.3F779412B8B5961A.idx  imgui_impl_opengl3.cpp.3BC4DC03E909C161.idx  imgui_impl_opengl3.h.9FE44BF823D4D019.idx  imgui_impl_opengl3_loader.h.B3707ED3408E1F54.idx  imgui_impl_sdl2.cpp.887547B9C30EE8BF.idx  imgui_impl_sdl2.h.FC1CCAB6673FD8FF.idx  imgui_internal.h.BF870DE02F903452.idx  imgui_tables.cpp.87CAB99DAE477F3C.idx  imgui_widgets.cpp.10CE07CE0DC90277.idx  imstb_rectpack.h.D29639EF7208F3C0.idx  imstb_textedit.h.269727383E3F20CD.idx  imstb_truetype.h.4C4886FC22F08FE3.idx  main2.cpp.762D192F51F841E9.idx
example/: CMakeLists.txt  main2.cpp
